# 360ghar-backend

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml  railway.toml
.github/: Dockerfile.test-db
.github/workflows/: tests.yml
app/: main.py
app/api/api_v1/: api.py
app/core/: auth.py  config.py  database.py  http.py  jwt_verification.py  logging.py  sse.py  utils.py
app/core/cache/: manager.py
app/infrastructure/: lifespan.py  mcp.py  middleware.py  scheduler.py
app/mcp/chatgpt/: discovery_tools.py  pm_rent_tools.py
app/middleware/: performance.py  security.py
app/models/: agents.py  bookings.py  enums.py  pm_finance.py  pm_leases.py  pm_maintenance.py  properties.py  users.py
app/schemas/: data_hub.py  flatmates.py  pagination.py  user.py
app/services/: blog.py  blog_auto_publish.py  blog_auto_publish_scheduler.py  booking.py  data_hub_scheduler.py  image_processing.py  notification_dispatcher.py  notification_scheduler.py  oauth_token_store.py  pm_dashboard.py  pm_reports.py  pm_tenants.py  push_notification.py  sms.py  storage_paths.py  user.py  vector_sync_scheduler.py  visit.py
app/services/agent/: analytics.py  crud.py  helpers.py
app/services/ai/: base.py
app/services/ai_agent/: __init__.py
app/services/blog_service/: generator.py
app/services/data_hub/: aggregator_eauctions.py  aggregator_misc.py  baanknet_auctions.py  bank_auctions.py  bank_rates.py  bank_specific_auctions.py  base_scraper.py  circle_rates.py  court_auctions.py  dda_auctions.py  dfc_delhi_auctions.py  drt_auctions.py  gazette.py  hsvp_auctions.py  hsvp_procure247_auctions.py  ibbi_auctions.py  jamabandi.py  mda_auctions.py  neighbourhood.py  rera_complaints.py  rera_projects.py  yeida_auctions.py  zoning.py
app/services/flatmates/: __init__.py  conversations.py  helpers.py  matching.py  moderation.py  profiles.py  visits.py
app/services/media/: __init__.py  integrity_sweep.py  url_verifier.py
app/services/notifications/: fcm.py  (+2 more)
app/utils/: validators.py
app/vector/: embedding_client.py  sync.py
docs/: flatmates-openapi.yaml  indian-proptech-twitter-research-may2026.md  repo-contract.json
plans/: memory-usage-reduction.md
populate_data/: clear_all_data.py  load_comprehensive_data.py
populate_data/data_populators/: base.py  booking_populator.py  interaction_populator.py  property_populator.py  user_populator.py  visit_populator.py
scripts/: blog_image_acquisition.py  delete_phantom_hc_properties.py  fix_floor_plan_urls.py  merge_duplicate_users.py  publish_blog.py
supabase/migrations/: 20260516000000_add_is_seed_data_flag.sql  20260517000001_sync_enums_and_constraints.sql  20260517000002_add_phone_verified_column.sql  20260617000000_add_property_dedup_index.sql
tests/: conftest.py  load_test_properties.py
tests/api/: test_agent_endpoints.py  test_amenity_endpoints.py  test_blog_endpoints.py  test_booking_endpoints.py  test_core_endpoints.py  test_flatmates_endpoints.py  test_notification_endpoints.py  test_oauth_endpoints.py  test_property_endpoints.py  test_swipe_endpoints.py  test_upload_endpoints.py  test_user_endpoints.py  test_vastu_endpoints.py  test_visit_endpoints.py
tests/e2e/: test_booking_complete_flow.py  test_property_listing_flow.py
tests/fixtures/: auth.py  data.py  factories.py  mocks.py  openapi_path_baseline.json
tests/integration/: test_full_text_search.py  test_geospatial_queries.py
tests/mcp/: test_admin_mcp_server.py  test_user_mcp_server.py
tests/middleware/: test_security_middleware.py
tests/pm/: test_pm_applications_tenants_pagination.py  test_pm_pagination_batch_a1.py
(+57 files in other folders)
